--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "mysql": "^2.16.0",
-    "express-handlebars": "^3.0.0"
+    "mysql2": "^1.6.5"
   },
   "bugs": {
     "url": "https://github.com/krekorian/burger/issues"
